# uni-lib

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
examples/linux/: CMakeLists.txt  button_example.c  freertos_gpio_example.c  freertos_hooks.c  gpio_example.c
include/components/: button.h
include/config/: linux_config.h
include/config/freertos/: FreeRTOSConfig.h
include/hal/: gpio.h
scripts/: setup_libs.sh
src/: .gitignore
src/components/: button.c
src/core/: CMakeLists.txt  freertos_hooks.c
src/drivers/: CMakeLists.txt
src/hal/linux/: CMakeLists.txt  gpio_linux.c
tests/: CMakeLists.txt  test_button.c  test_gpio.c
tests/mocks/: gpio_mock.c  gpio_mock.h
